--- a/blogs/package.json
+++ b/blogs/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.1.2",
     "history": "^5.0.1",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
